# pocket

./: README.md  convert_png.ps1  create_icns.ps1  create_ico.ps1  create_proper_ico.ps1  package.json
.github/workflows/: build-installers.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
