[package]
name = "anchor"
version = "0.1.0"
description = "Anchor Desktop - A production-grade desktop companion app for Anchor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anchor_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "anchor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-notification = "2.0"
nusb = "0.1.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
tauri-plugin-audio-recorder = "0.1.0"
tauri-plugin-fs-pro = "2.4.0"
tauri-plugin-locale = "2.0.1"
reqwest = { version = "0.11", features = ["json"] }

